# dblpbibtex

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  configure.ac  dblpbibtex.cpp  index.html  test.sh  version  version.txt
.github/workflows/: cpp.yml
contrib/: program_options.hpp
m4/: update.sh
src/: bib_get.hpp  bib_parse.hpp  bib_search.hpp  core.hpp  dblpbibtex.cpp  network.hpp
vs2013/: boost32.props  dblpbibtex.sln  dblpbibtex.vcxproj  dblpbibtex.vcxproj.filters
vs2017/: README.md  dblpbibtex.sln  dblpbibtex.vcxproj  dblpbibtex.vcxproj.filters
